# ncu_nsys_profile_tool

./: .gitignore  MANIFEST.in  README.md  parse_and_plot.py  profile_and_report.sh  pyproject.toml  requirements.txt  run_profiling.py  targets.tsv  utils.py
bash_metric/: __init__.py  parse_and_plot.py  run_profiling.py  targets.tsv
bash_metric/methods/: __init__.py
bash_metric/methods/nsys_ncu/: __init__.py  profile_and_report.sh
bash_metric/methods/nsys_ncu_all/: __init__.py  analyze_topk.py  capture_once.py  common.py  run_capture_and_parse.sh
methods/nsys_ncu/: README.md  gen_topk_regex.py  profile_and_report.sh
methods/nsys_ncu_all/: analyze_topk.py  capture_once.py
