[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bash-metric"
version = "0.4.0"
description = "Nsight Systems + Nsight Compute profiling pipeline and analyzers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Zhanglei Chao", email = "zhang.leichao@intellif.com" },
]
keywords = ["nsight", "profiling", "ncu", "nsys", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Benchmark",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "pyarrow>=15.0",
]
license-files = ["LICENSE"]

[project.optional-dependencies]
plot-fonts = [
    "mplfonts>=0.1",
]

[project.scripts]
bash-metric-run = "bash_metric.run_profiling:main"
bash-metric-parse = "bash_metric.parse_and_plot:cli"
bash-metric-capture-all = "bash_metric.methods.nsys_ncu_all.capture_once:main"
bash-metric-analyze-topk = "bash_metric.methods.nsys_ncu_all.analyze_topk:main"

[project.urls]
Homepage = "https://github.com/aliceengle/ncu_nsys_profile_tool"
Repository = "https://github.com/aliceengle/ncu_nsys_profile_tool"
Issues = "https://github.com/aliceengle/ncu_nsys_profile_tool/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["bash_metric*"]
